paginate get roles endpoint